# selfhosted-portal

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  compose.yml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
backend/: main.py  pyproject.toml
backend/tests/: conftest.py  test_whoami.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx-spa.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: catalog.json
frontend/src/: App.svelte  AppCard.test.ts  AppGrid.test.ts  app.css  main.ts  vite-env.d.ts
frontend/src/lib/: api.test.ts  api.ts  i18n.svelte.ts  types.ts
frontend/src/lib/components/: AccountPanel.svelte  AppCard.svelte  AppGrid.svelte  Header.svelte  LetterAvatar.svelte
proxy/: nginx.conf
