[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-whoami"
version = "1.0.0"
description = "Stateless identity adapter for the Authelia portal"
license = { text = "Apache-2.0" }
authors = [{ name = "Aubin Lambaré" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "ruff==0.11.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["."]
